...
      <FlatList
        data={data}
        renderItem={renderSpeciesGroup}
        keyExtractor={(item) => item.species}
        showsVerticalScrollIndicator={false}
        contentContainerStyle={styles.flatListContent}
        testID="species-list"
        refreshControl={
          <RefreshControl
            refreshing={isRefetching}
            onRefresh={refetch}
            tintColor={theme === "light" ? Colors.light.icon : Colors.dark.icon}
            testID="refresh-control"
...
